Update compose file